--- a/egglenderlogin/egglenderlogin/package.json
+++ b/egglenderlogin/egglenderlogin/package.json
@@ -16,6 +16,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.16",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
