--- a/egglenderlogin/egglenderlogin/package.json
+++ b/egglenderlogin/egglenderlogin/package.json
@@ -8,6 +8,9 @@
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "http-proxy-middleware": "^0.19.1",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
