--- a/Egglender-calendar-layout/package.json
+++ b/Egglender-calendar-layout/package.json
@@ -6,14 +6,14 @@
     "@devexpress/dx-react-core": "^2.7.3",
     "@devexpress/dx-react-scheduler": "^2.7.3",
     "@devexpress/dx-react-scheduler-material-ui": "^2.7.3",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/core": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.1.2",
-    "@testing-library/user-event": "^12.2.2",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.4.0",
+    "ical": "^0.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
