--- a/egglenderlogin/egglenderlogin/package.json
+++ b/egglenderlogin/egglenderlogin/package.json
@@ -5,12 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/styles": "^4.11.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "cross-fetch": "^3.0.6",
     "devextreme": "^20.2.4",
     "devextreme-react": "^20.2.4",
     "http-proxy-middleware": "^0.19.1",
