--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "## Introduction",
   "main": "egglenderlogin/src/index.js",
   "scripts": {
+    "install": "npm install --prefix egglenderlogin", 
     "test": "npm test --prefix egglenderlogin",
     "build": "npm run build --prefix egglenderlogin"
   },
