--- a/egglenderlogin/package.json
+++ b/egglenderlogin/package.json
@@ -39,6 +39,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "proxy":"http://149.28.86.112:9000",
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -57,4 +60,6 @@
       "last 1 safari version"
     ]
   }
+  
+  
 }
