--- a/egglenderlogin/package.json
+++ b/egglenderlogin/package.json
@@ -24,6 +24,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-images-upload": "^1.2.8",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
@@ -39,9 +40,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
-  "proxy":"http://149.28.86.112:9000",
-
+  "proxy": "http://149.28.86.112:9000",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -60,6 +59,4 @@
       "last 1 safari version"
     ]
   }
-  
-  
 }
