pass with no test

--- a/egglenderlogin/package.json
+++ b/egglenderlogin/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "proxy": "http://149.28.86.112:9000",
