--- a/egglenderlogin/package.json
+++ b/egglenderlogin/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "axios": "^0.21.0",
+    "cal-parser": "^1.0.1",
     "classnames": "^2.2.6",
     "cross-fetch": "^3.0.6",
     "devextreme": "^20.2.4",
@@ -21,6 +22,7 @@
     "lodash": "^4.17.20",
     "material-ui-dropzone": "^3.5.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
