--- a/egglenderlogin/package.json
+++ b/egglenderlogin/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "material-ui-dropzone": "^3.5.0",
+    "material-ui-image": "^3.3.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "prop-types": "^15.7.2",
