--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Introduction",
   "main": "egglenderlogin/src/index.js",
   "scripts": {
-    "install": "npm install --prefix egglenderlogin", 
+    "install": "cd egglenderlogin && yarn", 
     "test": "npm test --prefix egglenderlogin",
     "build": "npm run build --prefix egglenderlogin"
   },
